# Advanced-Machine-Learning-Course-Project

./: .gitignore  README.md  main.py  pyproject.toml
data/test/: le_monde_grid_1.json  le_monde_grid_mini_1.json  lefigaro_grid_1.xml  rci_grid_1.js  rci_grid_2.js  rci_grid_3.js  rci_grid_4.js
src/: data.py  encode_data.py  eval.py  lefigaro.py  lemonde.py  rci.py
src/scrapping/: 1195.json  1195.json.bak  crosswordgiant.py  data.py  encode_data.py  endpoints.json  generate_data.py  le_monde_query.txt  lefigaro.py  lemonde.py  rci.py  split_data.py  test.py  utils.py
src/solver/: BPSolver.py  Crossword.py  Solver.py  Utils.py  base_solver.py  bpsolver.py  crossword.py  models.py  solver.py  utils.py
src/train/: train_barthez.py  train_biencoder.py  train_encoder.py  train_encoders.py  train_t5.py
