[project]
name = "advanced-machine-learning-course-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasets>=4.4.2",
    "fastparquet>=2025.12.0",
    "mini-racer>=0.12.4",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "spacy>=3.8.11",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
